// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlameGraph EmptyReasons shows reasons when a profile has no samples 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    flame graph
     is empty for “
    Empty Thread
    ”
  </h3>
  <p>
    This thread has no samples.
  </p>
</div>
`;

exports[`FlameGraph EmptyReasons shows reasons when samples are out of range 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    flame graph
     is empty for “
    Empty
    ”
  </h3>
  <p>
    Broaden the selected range to view samples.
  </p>
</div>
`;

exports[`FlameGraph EmptyReasons shows reasons when samples have been completely filtered out 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    flame graph
     is empty for “
    Empty
    ”
  </h3>
  <p>
    Try broadening the selected range, removing search terms, or call tree transforms to view samples.
  </p>
</div>
`;

exports[`FlameGraph has a tooltip that matches the snapshot 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="--tooltip-detail-max-width: 600px; left: 14px; top: 306px;"
>
  <div
    class="tooltipCallNode"
    style="--graph-width: 150px; --graph-height: 10px;"
  >
    <div
      class="tooltipOneLine tooltipHeader"
    >
      <div
        class="tooltipTiming"
      >
        3.0ms (100%)
      </div>
      <div
        class="tooltipTitle"
      >
        A
      </div>
      <div
        class="tooltipIcon"
      />
    </div>
    <div
      class="tooltipCallNodeDetails"
    >
      <div
        class="tooltipCallNodeImplementation"
      >
        <div />
        <div
          class="tooltipCallNodeImplementationHeader"
        />
        <div
          class="tooltipCallNodeImplementationHeader"
        >
          <span
            class="tooltipCallNodeImplementationHeaderSwatchRunning"
          />
          Running
        </div>
        <div
          class="tooltipCallNodeImplementationHeader"
        >
          <span
            class="tooltipCallNodeImplementationHeaderSwatchSelf"
          />
          Self
        </div>
        <div
          class="tooltipLabel"
        >
          Overall
        </div>
        <div
          class="tooltipCallNodeImplementationGraph"
        >
          <div
            class="tooltipCallNodeImplementationGraphRunning"
            style="width: 150px;"
          />
          <div
            class="tooltipCallNodeImplementationGraphSelf"
            style="width: 0px;"
          />
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          3 samples
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          —
        </div>
        <div
          class="tooltipCallNodeImplementationName tooltipLabel"
        >
          Native code
        </div>
        <div
          class="tooltipCallNodeImplementationGraph"
        >
          <div
            class="tooltipCallNodeImplementationGraphRunning"
            style="width: 150px;"
          />
          <div
            class="tooltipCallNodeImplementationGraphSelf"
            style="width: 0px;"
          />
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          3 samples
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          —
        </div>
      </div>
      <div
        class="tooltipDetails tooltipCallNodeDetailsLeft"
      >
        <div
          class="tooltipLabel"
        >
          Stack Type:
        </div>
        <div>
          Native
        </div>
        <div
          class="tooltipLabel"
        >
          Category:
        </div>
        <div>
          <span
            class="colored-square category-color-blue"
          />
          DOM
        </div>
        <div
          class="tooltipLabel"
        >
          Script URL:
        </div>
        path/to/file:10:100
      </div>
    </div>
  </div>
</div>
`;

exports[`FlameGraph matches the snapshot 1`] = `
<div
  aria-labelledby="flame-graph-tab-button"
  class="flameGraph"
  id="flame-graph-tab"
  role="tabpanel"
>
  <div
    class="stackSettings"
  >
    <ul
      class="stackSettingsList"
    >
      <li
        class="stackSettingsListItem stackSettingsFilter"
      >
        <label
          class="photon-label photon-label-micro stackSettingsFilterLabel"
        >
          <input
            checked=""
            class="photon-radio photon-radio-micro stackSettingsFilterInput"
            name="stack-settings-filter"
            title="Filter stack frames to a type."
            type="radio"
            value="combined"
          />
          All stacks
        </label>
        <label
          class="photon-label photon-label-micro stackSettingsFilterLabel"
        >
          <input
            class="photon-radio photon-radio-micro stackSettingsFilterInput"
            name="stack-settings-filter"
            title="Filter stack frames to a type."
            type="radio"
            value="js"
          />
          JavaScript
        </label>
        <label
          class="photon-label photon-label-micro stackSettingsFilterLabel"
        >
          <input
            class="photon-radio photon-radio-micro stackSettingsFilterInput"
            name="stack-settings-filter"
            title="Filter stack frames to a type."
            type="radio"
            value="cpp"
          />
          Native
        </label>
      </li>
    </ul>
    <div
      class="panelSearchField stackSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter stacks: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
        <div
          class="panelSearchFieldIntroduction isHidden"
        >
          Did you know you can use the comma (,) to search using several terms?
        </div>
      </label>
    </div>
  </div>
  <ol
    class="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
      data-index="0"
      title="Complete \\"Empty\\""
    >
      <span
        class="filterNavigatorBarItemContent"
      >
        Complete "Empty"
      </span>
    </li>
  </ol>
  <div
    class="flameGraphContent"
  >
    <div
      class="react-contextmenu-wrapper treeViewContextMenu"
    >
      <div
        class="chartViewport"
        tabindex="0"
      >
        <div>
          <canvas
            class="chartCanvas flameGraphCanvas"
            height="300"
            style="width: 200px; height: 300px;"
            width="200"
          />
        </div>
        <div
          class="chartViewportScroll hidden"
        >
          Zoom Chart:
          <kbd
            class="chartViewportScrollKbd"
          >
            Ctrl + Scroll
          </kbd>
          or
          <kbd
            class="chartViewportScrollKbd"
          >
            Shift + Scroll
          </kbd>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FlameGraph matches the snapshot 2`] = `
Array [
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    200,
    300,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    0,
    284,
    200,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    284,
    1,
    15,
  ],
  Array [
    "measureText",
    "A",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "A",
    3,
    295,
  ],
  Array [
    "set fillStyle",
    "#0060df60",
  ],
  Array [
    "fillRect",
    0,
    268,
    200,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    268,
    1,
    15,
  ],
  Array [
    "measureText",
    "B",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "B",
    3,
    279,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    0,
    252,
    133.33333333333331,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    252,
    1,
    15,
  ],
  Array [
    "measureText",
    "C",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "C",
    3,
    263,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    252,
    66.66666666666667,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    252,
    1,
    15,
  ],
  Array [
    "measureText",
    "H",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "H",
    136.33333333333331,
    263,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    0,
    236,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    236,
    1,
    15,
  ],
  Array [
    "measureText",
    "D",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "D",
    3,
    247,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    236,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    236,
    1,
    15,
  ],
  Array [
    "measureText",
    "F",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "F",
    69.66666666666666,
    247,
  ],
  Array [
    "set fillStyle",
    "#45a1ff60",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    236,
    66.66666666666667,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    236,
    1,
    15,
  ],
  Array [
    "measureText",
    "I",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "I",
    136.33333333333331,
    247,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    0,
    220,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    220,
    1,
    15,
  ],
  Array [
    "measureText",
    "E",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "E",
    3,
    231,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    220,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    220,
    1,
    15,
  ],
  Array [
    "measureText",
    "G",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "G",
    69.66666666666666,
    231,
  ],
  Array [
    "set fillStyle",
    "#12bc0060",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    204,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    204,
    1,
    15,
  ],
  Array [
    "measureText",
    "J",
  ],
  Array [
    "set fillStyle",
    "#000",
  ],
  Array [
    "fillText",
    "J",
    69.66666666666666,
    215,
  ],
]
`;

exports[`FlameGraph shows a tooltip with the resource information 1`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="--tooltip-detail-max-width: 600px; left: 80.66666666666666px; top: 226px;"
>
  <div
    class="tooltipCallNode"
    style="--graph-width: 150px; --graph-height: 10px;"
  >
    <div
      class="tooltipOneLine tooltipHeader"
    >
      <div
        class="tooltipTiming"
      >
        1.0ms (33%)
      </div>
      <div
        class="tooltipTitle"
      >
        J
      </div>
      <div
        class="tooltipIcon"
      />
    </div>
    <div
      class="tooltipCallNodeDetails"
    >
      <div
        class="tooltipCallNodeImplementation"
      >
        <div />
        <div
          class="tooltipCallNodeImplementationHeader"
        />
        <div
          class="tooltipCallNodeImplementationHeader"
        >
          <span
            class="tooltipCallNodeImplementationHeaderSwatchRunning"
          />
          Running
        </div>
        <div
          class="tooltipCallNodeImplementationHeader"
        >
          <span
            class="tooltipCallNodeImplementationHeaderSwatchSelf"
          />
          Self
        </div>
        <div
          class="tooltipLabel"
        >
          Overall
        </div>
        <div
          class="tooltipCallNodeImplementationGraph"
        >
          <div
            class="tooltipCallNodeImplementationGraphRunning"
            style="width: 150px;"
          />
          <div
            class="tooltipCallNodeImplementationGraphSelf"
            style="width: 150px;"
          />
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          1 sample
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          1 sample
        </div>
        <div
          class="tooltipCallNodeImplementationName tooltipLabel"
        >
          Native code
        </div>
        <div
          class="tooltipCallNodeImplementationGraph"
        >
          <div
            class="tooltipCallNodeImplementationGraphRunning"
            style="width: 150px;"
          />
          <div
            class="tooltipCallNodeImplementationGraphSelf"
            style="width: 150px;"
          />
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          1 sample
        </div>
        <div
          class="tooltipCallNodeImplementationTiming"
        >
          1 sample
        </div>
      </div>
      <div
        class="tooltipDetails tooltipCallNodeDetailsLeft"
      >
        <div
          class="tooltipLabel"
        >
          Stack Type:
        </div>
        <div>
          Native
        </div>
        <div
          class="tooltipLabel"
        >
          Category:
        </div>
        <div>
          <span
            class="colored-square category-color-green"
          />
          Graphics
        </div>
        <div
          class="tooltipLabel"
        >
          Script URL:
        </div>
        path/to/file:17:107
        <div
          class="tooltipLabel"
        >
          Resource:
        </div>
        libxul.so
      </div>
    </div>
  </div>
</div>
`;
